--- a/assets/package.json
+++ b/assets/package.json
@@ -11,12 +11,17 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.13.10",
+        "@babel/preset-env": "^7.13.10",
+        "babel-loader": "^8.2.2",
         "css-loader": "^5.1.1",
+        "css-minimizer-webpack-plugin": "^1.3.0",
+        "file-loader": "^6.2.0",
         "mini-css-extract-plugin": "^1.3.9",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.8",
         "sass-loader": "^11.0.1",
-        "webpack": "^5.24.2",
+        "webpack": "^5.26.3",
         "webpack-cli": "^4.5.0"
     }
 }
