🎨 (global) change description / responsive header / filters / change button command / add mixin

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 #ignorer ces fichiers
 /assets/cache
 /assets/node_modules
-/assets/package-lock.json
-/assets/package.json
+
+.DS_Store
+
+node_modules
